Add installation of global node modules

--- a/scripts/install-packages.yaml
+++ b/scripts/install-packages.yaml
@@ -2,6 +2,7 @@
 providers:
   winget:
   scoop:
+  node:
   msys2:
   - build
   Microsoft.VisualStudio:
@@ -18,3 +19,5 @@ packages:
   - Neovim.Neovim
   - Google.GoogleDrive
   msys2:
+  node:
+  - jsondiffpatch
