Fixed installations for nvim

--- a/scripts/install-packages.yaml
+++ b/scripts/install-packages.yaml
@@ -17,6 +17,9 @@ packages:
   - gsudo
   - nu
   - ripgrep
+  - cmake
+  - fzf
+  - fd
   scoop.global:
   - JetBrainsMono-NF # nerd font
   winget:
